force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/PJN_Network_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Data change request field mapping for Veeva Network</description>
    <label>Network Field Mapping</label>
    <pluralLabel>Network Field Mappings</pluralLabel>
</CustomObject>