force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/fields/PJN_Active__c.field-meta.xml
<CustomField>
    <fullName>PJN_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this field be included when creating data change requests?</description>
    <inlineHelpText>Should this field be included when creating data change requests?</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>