force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/fields/PJN_DCR_Transmission__c.field-meta.xml
<CustomField>
    <fullName>PJN_DCR_Transmission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is DCR allowed to be transmitted?</description>
    <inlineHelpText>Is DCR allowed to be transmitted?</inlineHelpText>
    <label>DCR Transmission</label>
    <type>Checkbox</type>
</CustomField>