force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/fields/PJN_DCR_Update_After_Approval__c.field-meta.xml
<CustomField>
    <fullName>PJN_DCR_Update_After_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Revert record update creating a new DCR. It updates the record once gets final value from Network approval.</description>
    <inlineHelpText>Revert record update creating a new DCR. It updates the record once gets final value from Network approval.</inlineHelpText>
    <label>DCR Update After Approval</label>
    <type>Checkbox</type>
</CustomField>