force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/fields/PJN_External_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_External_Field_Name__c</fullName>
    <description>External field API name to map in Veeva Network.</description>
    <inlineHelpText>External field API name to map in Veeva Network.</inlineHelpText>
    <label>External Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>