force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/fields/PJN_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_API_Name__c</fullName>
    <description>Field API name to map into Veeva Network.</description>
    <inlineHelpText>Field API name to map into Veeva Network.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>