force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/fields/PJN_Network_Object__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_Object__c</fullName>
    <description>SObject which this field mapping is related to</description>
    <inlineHelpText>SObject which this field mapping is related to</inlineHelpText>
    <label>Network Object</label>
    <referenceTo>PJN_Network_Object_Setting__mdt</referenceTo>
    <relationshipLabel>Network Field Mappings</relationshipLabel>
    <relationshipName>PJN_Network_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>