force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/fields/PJN_Required_for_DCR_Transmission__c.field-meta.xml
<CustomField>
    <fullName>PJN_Required_for_DCR_Transmission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is required for every DCR transmission otherwise an error will be returned.</description>
    <inlineHelpText>This field is required for every DCR transmission otherwise an error will be returned.</inlineHelpText>
    <label>Required for DCR Transmission</label>
    <type>Checkbox</type>
</CustomField>