force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/fields/PJN_SObject_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_SObject_Record_Type__c</fullName>
    <defaultValue>&quot;ALL&quot;</defaultValue>
    <description>SObject record type associated to this field mapping. &apos;ALL&apos; would be included in all record types.</description>
    <inlineHelpText>SObject record type associated to this field mapping. &apos;ALL&apos; would be included in all record types.</inlineHelpText>
    <label>SObject Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>