force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/fields/PJN_Sync_Transmission__c.field-meta.xml
<CustomField>
    <fullName>PJN_Sync_Transmission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is sync allowed to be transmitted?</description>
    <inlineHelpText>Is sync allowed to be transmitted?</inlineHelpText>
    <label>Sync Transmission</label>
    <type>Checkbox</type>
</CustomField>