force-app/main/default/src/objects/PJN_Network_Field_Mapping__mdt/listViews/PJN_Contact_Information.listView-meta.xml
<ListView>
    <fullName>PJN_Contact_Information</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_SObject_Record_Type__c</columns>
    <columns>PJN_Field_API_Name__c</columns>
    <columns>PJN_External_Field_Name__c</columns>
    <columns>PJN_Required_for_DCR_Transmission__c</columns>
    <columns>PJN_DCR_Transmission__c</columns>
    <columns>PJN_Sync_Transmission__c</columns>
    <columns>PJN_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PJN_Network_Object__c</field>
        <operation>equals</operation>
        <value>PJN_Contact_Information</value>
    </filters>
    <label>Contact Information</label>
    <language>en_US</language>
</ListView>